Support 'browser-only' Theia
Adds tooling, adapts the current code base and provides an example application for the
new 'browser-only' Theia application target. This target generates a Theia frontend
application which can run without a backend, transforming the Theia application to a
static site.

Adapts tooling to:
- support new 'browser-only' application target
- support new 'frontendOnly' and 'frontendOnlyPreload' module declarations
- use http-server when starting 'browser-only' applications

Replaces backend services with browser-only variants
- implementation of BrowserFS-based filesystem
- implementation of 'ServiceConnectionProvider' which timeouts for all requests,
  enabling loading all Theia packages

Adds a browser-only example application and api-samples showcasing the customization of
the new BrowserFS-based filesystem.

Co-authored-by: Alexandra Buzila <abuzila@eclipsesource.com>
Co-authored-by: Stefan Dirix <sdirix@eclipsesource.com>
Co-authored-by: Tobias Ortmayr <tortmayr@eclipsesource.com>
Co-authored-by: Eugen Neufeld <eneufeld@eclipsesource.com>

--- a/examples/api-samples/package.json
+++ b/examples/api-samples/package.json
@@ -29,6 +29,9 @@
     {
       "electronMain": "lib/electron-main/update/sample-updater-main-module",
       "frontendElectron": "lib/electron-browser/updater/sample-updater-frontend-module"
+    },
+    {
+      "frontendOnly": "lib/browser-only/api-samples-frontend-only-module"
     }
   ],
   "keywords": [
