--- a/packages/search-in-workspace/package.json
+++ b/packages/search-in-workspace/package.json
@@ -10,7 +10,8 @@
     "@theia/process": "1.41.0",
     "@theia/workspace": "1.41.0",
     "@vscode/ripgrep": "^1.14.2",
-    "minimatch": "^5.1.0"
+    "minimatch": "^5.1.0",
+    "react-autosize-textarea": "^7.0.0"
   },
   "publishConfig": {
     "access": "public"
