Add smoke test for production build
Currently we don't seem to have any automated test that verifies whether
the production build works as expected.

For a recent issue and its root cause, which remained unrevealed by the
CI, see
https://github.com/eclipse-theia/theia/issues/12962

Contributed on behalf of STMicroelectronics

Change-Id: Ia2fdb54873344e5d0da12522441a649b6b90bdac

--- a/examples/browser/package.json
+++ b/examples/browser/package.json
@@ -62,7 +62,9 @@
   "scripts": {
     "clean": "theia clean",
     "build": "yarn -s compile && yarn -s bundle",
+    "build:production": "yarn -s compile && yarn -s bundle:production",
     "bundle": "yarn rebuild && theia build --mode development",
+    "bundle:production": "yarn rebuild && theia build --mode production",
     "compile": "tsc -b",
     "coverage": "yarn -s test --test-coverage && yarn -s coverage:report",
     "coverage:clean": "rimraf .nyc_output && rimraf coverage",
