--- a/.github/workflows/native-dependencies.yml
+++ b/.github/workflows/native-dependencies.yml
@@ -12,16 +12,17 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
+      # Update the node version here after every Electron upgrade
       - name: Use Node.js 18.17.0
         uses: actions/setup-node@v3
         with:
           node-version: '18.17.0'
           registry-url: 'https://registry.npmjs.org'
 
-      - name: Use Python 3.x
+      - name: Use Python 3.11
         uses: actions/setup-python@v4
         with:
-          python-version: '3.x'
+          python-version: '3.11'
 
       - name: Install and Build
         shell: bash
