--- a/packages/remote/package.json
+++ b/packages/remote/package.json
@@ -4,13 +4,14 @@
   "description": "Theia - Remote",
   "dependencies": {
     "@theia/core": "1.42.0",
+    "@theia/filesystem": "1.42.0",
     "archiver": "^5.3.1",
     "decompress": "^4.2.1",
     "decompress-tar": "^4.0.0",
     "decompress-targz": "^4.0.0",
     "decompress-unzip": "^4.0.1",
     "express-http-proxy": "^1.6.3",
-    "nanoid": "3.3.4",
+    "glob": "^8.1.0",
     "ssh2": "^1.12.0",
     "ssh2-sftp-client": "^9.1.0",
     "socket.io": "^4.5.3",
@@ -55,6 +56,7 @@
     "@types/archiver": "^5.3.2",
     "@types/decompress": "^4.2.4",
     "@types/express-http-proxy": "^1.6.3",
+    "@types/glob": "^8.1.0",
     "@types/ssh2": "^1.11.11",
     "@types/ssh2-sftp-client": "^9.0.0"
   },
