--- a/sample-plugins/sample-namespace/plugin-a/package.json
+++ b/sample-plugins/sample-namespace/plugin-a/package.json
@@ -12,7 +12,7 @@
     "vscode": "^1.50.0"
   },
   "activationEvents": [
-    "onCommand:plugin-a.hello"
+    "onStartupFinished"
   ],
   "devDependencies": {
     "@types/vscode": "^1.50.0"
@@ -26,6 +26,19 @@
       {
         "command": "plugin-a.hello",
         "title": "Hello from plugin-a"
+      }
+    ],
+    "languages": [
+      {
+        "id": "python",
+        "extensions": [
+          ".py",
+          ".python"
+        ],
+        "icon": {
+          "dark": "resources/python_dark.svg",
+          "light": "resources/python_light.svg"
+        }
       }
     ]
   }
