--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -28,10 +28,10 @@ jobs:
           node-version: "18.x"
           registry-url: "https://registry.npmjs.org"
 
-      - name: Use Python 3.x
+      - name: Use Python 3.11
         uses: actions/setup-python@v4
         with:
-          python-version: "3.x"
+          python-version: "3.11"
 
       - name: Build Browser
         shell: bash
