--- a/examples/playwright/package.json
+++ b/examples/playwright/package.json
@@ -21,7 +21,7 @@
     "playwright:install": "playwright install chromium",
     "ui-tests": "yarn build && playwright test --config=./configs/playwright.config.ts",
     "ui-tests-electron": "yarn build && USE_ELECTRON=true playwright test --config=./configs/playwright.config.ts",
-    "ui-tests-ci": "yarn build && playwright test --config=./configs/playwright.ci.config.ts && USE_ELECTRON=true playwright test --config=./configs/playwright.ci.config.ts ",
+    "ui-tests-ci": "yarn build && playwright test --config=./configs/playwright.ci.config.ts",
     "ui-tests-headful": "yarn build && playwright test --config=./configs/playwright.headful.config.ts",
     "ui-tests-report-generate": "allure generate ./allure-results --clean -o allure-results/allure-report",
     "ui-tests-report": "yarn ui-tests-report-generate && allure open allure-results/allure-report"
