--- a/package.json
+++ b/package.json
@@ -80,7 +80,8 @@
     "preinstall": "node-gyp install",
     "prepare": "yarn -s compile:references && lerna run prepare && yarn -s compile",
     "publish:latest": "lerna publish --exact --yes --no-push && yarn -s publish:check",
-    "publish:next": "lerna publish preminor --exact --canary --preid next --dist-tag next --no-git-reset --no-git-tag-version --no-push --yes && yarn -s publish:check",
+    "publish:next": "yarn -s publish:local:next && yarn -s publish:check",
+    "publish:local:next": "lerna publish preminor --exact --canary --preid next --dist-tag next --no-git-reset --no-git-tag-version --no-push --yes",
     "publish:check": "node scripts/check-publish.js",
     "rebuild:clean": "rimraf .browser_modules",
     "test": "yarn -s test:theia && yarn -s electron test && yarn -s browser test",
