--- a/.github/workflows/translation.yml
+++ b/.github/workflows/translation.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Use Python 3.x
         uses: actions/setup-python@v4
         with:
-          python-version: "3.x"
+          python-version: "3.11"
 
       - name: Install and Build
         shell: bash
