--- a/tsconfig.json
+++ b/tsconfig.json
@@ -70,6 +70,9 @@
       "path": "packages/debug"
     },
     {
+      "path": "packages/dev-container"
+    },
+    {
       "path": "packages/editor"
     },
     {
