--- a/packages/vsx-registry/package.json
+++ b/packages/vsx-registry/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@theia/core": "1.46.0",
     "@theia/filesystem": "1.46.0",
+    "@theia/navigator": "1.46.0",
     "@theia/ovsx-client": "1.46.0",
     "@theia/plugin-ext": "1.46.0",
     "@theia/plugin-ext-vscode": "1.46.0",
