--- a/examples/browser/package.json
+++ b/examples/browser/package.json
@@ -24,6 +24,7 @@
     "@theia/api-samples": "1.52.0",
     "@theia/bulk-edit": "1.52.0",
     "@theia/callhierarchy": "1.52.0",
+    "@theia/collaboration": "1.52.0",
     "@theia/console": "1.52.0",
     "@theia/core": "1.52.0",
     "@theia/debug": "1.52.0",
