--- a/packages/bulk-edit/package.json
+++ b/packages/bulk-edit/package.json
@@ -8,7 +8,8 @@
     "@theia/filesystem": "1.46.0",
     "@theia/monaco": "1.46.0",
     "@theia/monaco-editor-core": "1.83.101",
-    "@theia/workspace": "1.46.0"
+    "@theia/workspace": "1.46.0",
+    "tslib": "^2.6.2"
   },
   "publishConfig": {
     "access": "public"
