--- a/packages/keymaps/package.json
+++ b/packages/keymaps/package.json
@@ -8,7 +8,8 @@
     "@theia/monaco-editor-core": "1.83.101",
     "@theia/preferences": "1.46.0",
     "@theia/userstorage": "1.46.0",
-    "jsonc-parser": "^2.2.0"
+    "jsonc-parser": "^2.2.0",
+    "tslib": "^2.6.2"
   },
   "devDependencies": {
     "@theia/ext-scripts": "1.46.0"
