--- a/packages/output/package.json
+++ b/packages/output/package.json
@@ -8,7 +8,8 @@
     "@theia/monaco": "1.46.0",
     "@theia/monaco-editor-core": "1.83.101",
     "@types/p-queue": "^2.3.1",
-    "p-queue": "^2.4.2"
+    "p-queue": "^2.4.2",
+    "tslib": "^2.6.2"
   },
   "publishConfig": {
     "access": "public"
