--- a/packages/plugin-metrics/package.json
+++ b/packages/plugin-metrics/package.json
@@ -7,7 +7,8 @@
     "@theia/metrics": "1.46.0",
     "@theia/monaco-editor-core": "1.83.101",
     "@theia/plugin": "1.46.0",
-    "@theia/plugin-ext": "1.46.0"
+    "@theia/plugin-ext": "1.46.0",
+    "tslib": "^2.6.2"
   },
   "publishConfig": {
     "access": "public"
