--- a/packages/remote/package.json
+++ b/packages/remote/package.json
@@ -15,7 +15,8 @@
     "ssh2": "^1.12.0",
     "ssh2-sftp-client": "^9.1.0",
     "socket.io": "^4.5.3",
-    "socket.io-client": "^4.5.3"
+    "socket.io-client": "^4.5.3",
+    "tslib": "^2.6.2"
   },
   "publishConfig": {
     "access": "public"
