--- a/packages/typehierarchy/package.json
+++ b/packages/typehierarchy/package.json
@@ -4,7 +4,8 @@
   "description": "Theia - Type Hierarchy Extension",
   "dependencies": {
     "@theia/core": "1.46.0",
-    "@theia/editor": "1.46.0"
+    "@theia/editor": "1.46.0",
+    "tslib": "^2.6.2"
   },
   "publishConfig": {
     "access": "public"
