Create PR from changes

--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -4,8 +4,16 @@ permissions:
   id-token: write
 
 on:
-  release:
-    types: [published]
+  workflow_dispatch:
+    inputs:
+      release_type:
+        description: 'Release Type'
+        required: true
+        default: 'minor'
+        type: choice
+        options:
+          - 'minor'
+          - 'patch'
 
 jobs:
   publish:
@@ -39,7 +47,27 @@ jobs:
       - name: Publish NPM
         shell: bash
         run: |
-          yarn publish:latest
+          yarn publish:latest -- ${{ inputs.release_type }}
+          yarn publish:check
         env:
           NPM_CONFIG_PROVENANCE: "true" # enable provenance check
           NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
+
+      - name: Get Actor User Data
+        uses: octokit/request-action@v2.x
+        id: actor_user_data
+        with:
+          route: GET /users/{user}
+          user: ${{ github.actor }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Create Pull Request
+        uses: peter-evans/create-pull-request@v6
+        with:
+          commiter: ${{ github.actor }} <${{ fromJson(steps.actor_user_data.outputs.data).email }}>
+          author: ${{ github.actor }} <${{ fromJson(steps.actor_user_data.outputs.data).email }}>
+          branch: bot/package-update
+          title: Package update for version ${{ env.NEXT_VERSION_NUMBER }}
+          commit-message: Package update for version ${{ env.NEXT_VERSION_NUMBER }}
+          body: Automated package update for Theia version ${{ env.NEXT_VERSION_NUMBER }}. Triggered by @${{ github.actor }}.
