Remove xvfb action and use it directly
As it turns out (see https://github.com/coactions/setup-xvfb/issues/21), it is available in our container anyway.
Also pin the Python version to 3.11.

Change-Id: Id8d2416996ea489675ca7e50da59286af1965777

--- a/.github/workflows/performance-tests.yml
+++ b/.github/workflows/performance-tests.yml
@@ -20,10 +20,10 @@ jobs:
           node-version: "18.x"
           registry-url: "https://registry.npmjs.org"
 
-      - name: Use Python 3.x
+      - name: Use Python 3.11
         uses: actions/setup-python@v4
         with:
-          python-version: "3.x"
+          python-version: '3.11'
 
       - name: Build
         shell: bash
@@ -36,14 +36,12 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # https://github.com/microsoft/vscode-ripgrep/issues/9
 
       - name: Performance (browser)
-        uses: coactions/setup-xvfb@v1
-        with:
-          run: yarn performance:startup:browser
+        shell: bash
+        run: yarn performance:startup:browser
 
       - name: Performance (Electron)
-        uses: coactions/setup-xvfb@v1
-        with:
-          run: yarn performance:startup:electron
+        shell: bash
+        run: xvfb-run yarn performance:startup:electron
 
       - name: Analyze performance results
         uses: benchmark-action/github-action-benchmark@v1
