--- a/packages/terminal/package.json
+++ b/packages/terminal/package.json
@@ -9,6 +9,7 @@
     "@theia/process": "1.47.0",
     "@theia/variable-resolver": "1.47.0",
     "@theia/workspace": "1.47.0",
+    "@theia/file-search": "1.47.0",
     "tslib": "^2.6.2",
     "xterm": "^5.3.0",
     "xterm-addon-fit": "^0.8.0",
