--- a/packages/notebook/package.json
+++ b/packages/notebook/package.json
@@ -7,6 +7,7 @@
     "@theia/editor": "1.48.0",
     "@theia/filesystem": "1.48.0",
     "@theia/monaco": "1.48.0",
+    "@theia/outline-view": "1.48.0",
     "@theia/monaco-editor-core": "1.83.101",
     "react-perfect-scrollbar": "^1.5.8",
     "tslib": "^2.6.2"
