--- a/packages/process/package.json
+++ b/packages/process/package.json
@@ -4,7 +4,7 @@
   "description": "Theia process support.",
   "dependencies": {
     "@theia/core": "1.48.0",
-    "node-pty": "1.0.0",
+    "node-pty": "1.1.0-beta5",
     "string-argv": "^0.1.1",
     "tslib": "^2.6.2"
   },
