setting preferences from command line when starting theia
Signed-off-by: Jonah Iden <jonah.iden@typefox.io>

--- a/packages/preferences/package.json
+++ b/packages/preferences/package.json
@@ -21,7 +21,8 @@
   },
   "theiaExtensions": [
     {
-      "frontend": "lib/browser/preference-frontend-module"
+      "frontend": "lib/browser/preference-frontend-module",
+      "backend": "lib/node/preference-backend-module"
     }
   ],
   "keywords": [
