--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -153,6 +153,9 @@
       "frontendElectron": "lib/electron-browser/window/electron-window-module"
     },
     {
+      "backendElectron": "lib/electron-node/cli/electron-backend-cli-module"
+    },
+    {
       "frontend": "lib/browser/keyboard/browser-keyboard-module",
       "frontendElectron": "lib/electron-browser/keyboard/electron-keyboard-module",
       "backendElectron": "lib/electron-node/keyboard/electron-backend-keyboard-module"
