--- a/packages/plugin-ext/tsconfig.json
+++ b/packages/plugin-ext/tsconfig.json
@@ -11,8 +11,7 @@
     ]
   },
   "include": [
-    "src",
-    "../core/src/browser/shell/view-column-service.ts"
+    "src"
   ],
   "references": [
     {
