--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -51,7 +51,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [windows-2019, ubuntu-22.04, macos-14]
+        os: [windows-latest, ubuntu-latest, macos-latest]
         node: [18.x, 20.x]
 
     runs-on: ${{ matrix.os }}
