--- a/packages/ai-chat/package.json
+++ b/packages/ai-chat/package.json
@@ -9,7 +9,8 @@
     "@theia/filesystem": "1.49.0",
     "@theia/workspace": "1.49.0",
     "minimatch": "^5.1.0",
-    "tslib": "^2.6.2"
+    "tslib": "^2.6.2",
+    "uuid": "^10.0.0"
   },
   "publishConfig": {
     "access": "public"
