--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -86,7 +86,7 @@ jobs:
         if: runner.os == 'Linux'
         shell: bash
         run: |
-          yarn -s download:plugins
+          yarn -s download:plugins --rate-limit 3
 
       - name: Build
         shell: bash
