--- a/packages/debug/package.json
+++ b/packages/debug/package.json
@@ -13,6 +13,7 @@
     "@theia/output": "1.51.0",
     "@theia/process": "1.51.0",
     "@theia/task": "1.51.0",
+    "@theia/test": "1.51.0",
     "@theia/terminal": "1.51.0",
     "@theia/variable-resolver": "1.51.0",
     "@theia/workspace": "1.51.0",
